overflow bugfix

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -486,6 +486,7 @@
 
       p {
         transform: translateY(5rem);
+        opacity: 0;
 
         position: absolute;
         bottom: 2rem;
@@ -495,7 +496,7 @@
         font-family: $sans-serif;
         color: white;
 
-        transition: transform ease-in-out 0.15s;
+        transition: transform ease-in-out 0.15s, opacity ease-in-out 0.15s;
       }
 
       &:hover {
@@ -504,6 +505,7 @@
 
         p {
           transform: translateY(0);
+          opacity: 1;
         }
       }
     }
